--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@capacitor/app": "4.1.1",
+    "@auth0/auth0-react": "^1.12.0",
+    "@capacitor/app": "^4.1.1",
+    "@capacitor/browser": "^4.1.0",
     "@capacitor/core": "4.5.0",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.0",
